feat: course class
